fix 100vh issue on safari ios

--- a/src/static/css/connect.css
+++ b/src/static/css/connect.css
@@ -13,7 +13,7 @@
 div.connect {
 	padding: 1rem;
 	width: 100vw;
-	height: 100vh;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
