--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -78,17 +78,18 @@ p {
 }
 
 html {
-	width: 100%;
 	height: 100%;
 }
 
 body {
-	height: 100%;
-	width: 100%;
 	height: 100%;
 	background-color: #24233b;
 	font-family: Raleway, sans-serif;
 	/* padding: 1rem; */
 	margin: 0;
 	overflow: hidden;
+}
+
+#root {
+	height: 100%;
 }
